<resources>
    <string name="app_name">English Premier League</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Football</string>
    <string name="nav_header_subtitle">English Premier League</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pencetak_gol">Scorer :</string>
    <string name="yellow_card">Yellow Card :</string>
    <string name="red_card">Red Card :</string>
    <string name="name_titik_dua">Name :</string>
    <string name="name">Name</string>
    <string name="julukan">Alt. Name</string>
    <string name="asal">From</string>
    <string name="tahun_berdiri">Since</string>
    <string name="website">Website</string>
    <string name="manager">Manager</string>
    <string name="deskripsi">Description</string>
    <string name="stadion">Stadium</string>
    <string name="kapasitas_stadion">Stadium Capacity</string>
    <string name="tgl">Date</string>
    <string name="versus">Versus</string>
    <string name="skor">Result Score</string>
    <string name="jenis_olahraga">Sports :</string>
    <string name="nama_liga">League :</string>
    <string name="negara">Country :</string>
    <string name="website_titik_dua">Website :</string>
    <string name="deskripsi_titik_dua">Description :</string>
    <string name="jam">Time</string>
    <string name="asal_titik_dua">From :</string>
    <string name="tahun_titik_dua">Since :</string>
    <string name="manager_titik_dua">Manager :</string>
    <string name="stadion_titik_dua">Stadium :</string>
    <string name="detail">Detail</string>
    <string name="daftar_pemain">Player List</string>
    <string name="sepak_bola">Football</string>
    <string name="posisi_td">Position :</string>
    <string name="tb_bb_td">Hg/Wg :</string>
    <string name="ttl_td">Birth :</string>
    <string name="warga_negara_td">Nat. :</string>
    <string name="beranda">Home</string>
    <string name="daftar_klub">Clubs List</string>
    <string name="klasemen">Standings</string>
    <string name="jadwal">Next Match</string>
    <string name="hasil">Result Match</string>
    <string name="keluar">Exit</string>
    <string name="lainnya">Others</string>
    <string name="ganti_bahasa">Change Language</string>
    <string name="NO">NO</string>
    <string name="NAMA_KLUB">CLUB NAME</string>
    <string name="T">P</string>
    <string name="M">W</string>
    <string name="S">D</string>
    <string name="K">L</string>
    <string name="GM">GF</string>
    <string name="GK">GA</string>
    <string name="POIN">PTS</string>
    <string name="detail_klub">Club Detail</string>
    <string name="klik_detil">*Click club square for detail match</string>
</resources>
