<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/NO"
            android:gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/NAMA_KLUB"
            android:gravity="center"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/T"
            android:gravity="right"
            android:layout_marginLeft="6dp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/M"
            android:gravity="right"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/S"
            android:gravity="right"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/K"
            android:gravity="right"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/GM"
            android:gravity="right"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/GK"
            android:gravity="right"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/POIN"
            android:gravity="right"
            android:layout_marginRight="6dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listKlasemen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:divider="@android:color/transparent"/>


</LinearLayout>