<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailKlub">

    <ImageView
        android:id="@+id/ivDetKlub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/name"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvNamaKlub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/julukan"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvJulukanKlub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/asal"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvAsalKlub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/tahun_berdiri"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvTahunKlub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/website"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvWebsiteKlub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/manager"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvPelatihKlub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/deskripsi"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvDeskripsiKlub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/stadion"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvStadionKlub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/kapasitas_stadion"
        android:layout_marginTop="16dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvKapasitasKlub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/ivGbrStadion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#000000"
        android:layout_marginTop="16dp"/>


</LinearLayout>
</ScrollView>
