<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#00B8D4"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivKlub"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/name_titik_dua" />

                    <TextView
                        android:id="@+id/tvNamaKlub"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/asal_titik_dua" />

                    <TextView
                        android:id="@+id/tvMarkas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/tahun_titik_dua" />

                    <TextView
                        android:id="@+id/tvTahunBerdiri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/manager_titik_dua" />

                    <TextView
                        android:id="@+id/tvPelatih"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/stadion_titik_dua" />

                    <TextView
                        android:id="@+id/tvStadion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="6dp"
                        android:text="@string/detail" />

                    <Button
                        android:id="@+id/btnPemain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/daftar_pemain" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
