<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#FFD600"
        app:cardElevation="1dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivPotoPemain"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/name_titik_dua"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvNamaPemain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/warga_negara_td"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvNegaraPemain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/ttl_td"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvTTLPemain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/tb_bb_td"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvTBPemain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:text="@string/posisi_td"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvPosisiPemain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
